--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -498,6 +498,39 @@ tasks:
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
 
+    - name: "test-5.0-standalone"
+      tags: ["5.0", "standalone"]
+      commands:
+        - func: "prepare resources"
+        - func: "fix absolute paths"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "5.0"
+            TOPOLOGY: "server"
+        - func: "run tests"
+
+    - name: "test-5.0-replica_set"
+      tags: ["5.0", "replica_set"]
+      commands:
+        - func: "prepare resources"
+        - func: "fix absolute paths"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "5.0"
+            TOPOLOGY: "replica_set"
+        - func: "run tests"
+
+    - name: "test-5.0-sharded_cluster"
+      tags: ["5.0", "sharded_cluster"]
+      commands:
+        - func: "prepare resources"
+        - func: "fix absolute paths"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "5.0"
+            TOPOLOGY: "sharded_cluster"
+        - func: "run tests"
+
     - name: "test-latest-standalone"
       tags: ["latest", "standalone"]
       commands:
@@ -904,6 +937,10 @@ axes:
         display_name: "latest"
         variables:
            MONGODB_VERSION: "latest"
+      - id: "5.0"
+        display_name: "5.0"
+        variables:
+          MONGODB_VERSION: "5.0"
       - id: "4.4"
         display_name: "4.4"
         variables:
@@ -931,16 +968,16 @@ axes:
           PYTHON: "/opt/mongodbtoolchain/v3/bin/python3"
           VENV_BIN_DIR: "bin"
 
-      - id: ubuntu-16.04
-        display_name: "Ubuntu 16.04"
-        run_on: ubuntu1604-test
+      - id: ubuntu-20.04
+        display_name: "Ubuntu 20.04"
+        run_on: ubuntu2004-test
         variables:
           PYTHON: "/opt/mongodbtoolchain/v3/bin/python3"
           VENV_BIN_DIR: "bin"
 
-      - id: macos-10.14
-        display_name: "macOS 10.14"
-        run_on: macos-1014
+      - id: macos-10.15
+        display_name: "macOS 10.15"
+        run_on: macos-1015
         variables:
           PYTHON: "/opt/mongodbtoolchain/v3/bin/python3"
           VENV_BIN_DIR: "bin"
@@ -974,11 +1011,15 @@ axes:
       - id: "5.3"
         display_name: "Swift 5.3"
         variables:
-          SWIFT_VERSION: "5.3.3"
-      - id: "5.4-dev"
-        display_name: "Swift 5.4-dev"
+          SWIFT_VERSION: "5.3.3"      
+      - id: "5.4"
+        display_name: "Swift 5.4"
         variables:
-          SWIFT_VERSION: "5.4-DEVELOPMENT-SNAPSHOT-2021-03-25-a"
+          SWIFT_VERSION: "5.4"
+      - id: "5.5-dev"
+        display_name: "Swift 5.5-dev"
+        variables:
+          SWIFT_VERSION: "DEVELOPMENT-SNAPSHOT-2021-04-26-a"
 
   - id: ssl-auth
     display_name: SSL and Auth
@@ -1028,38 +1069,97 @@ axes:
           TEST_FILTER: "VersionedAPITests"
 
 buildvariants:
-
-- matrix_name: "tests-all"
+# there are no 5.1 toolchains for Ubuntu 20.04. unfortunately as of now we cannot remove
+# entire buildvariants via rule from the main matrix so we need to split this up. see EVG-13092
+- matrix_name: "tests-5.1"
   matrix_spec:
-    os-fully-featured: "*"
-    swift-version:
-      - "5.1"
-      - "5.2"
+    os-fully-featured:
+      - "ubuntu-18.04"
+      - "macos-10.15"
+    swift-version: "5.1"
     ssl-auth: "*"
   display_name: "${swift-version} ${os-fully-featured} ${ssl-auth}"
   tasks:
      - ".latest"
+     - ".5.0"
      - ".4.4"
      - ".4.2"
      - ".4.0"
      - ".3.6"
   rules:
-  # pre 4.0 we are just using legacy linux mongoDB since ubuntu 18.04 didn't
-  # exist when 3.6 came out. legacy doesn't link to OpenSSL so we can't run
-  # SSL tests there.
+  # MongoDB 3.6 does not have Ubuntu 18.04-specific Linux releases, so we just use
+  # generic Linux there. This do not link to OpenSSL, so we have to skip SSL tests.
   - if:
-      os-fully-featured: "ubuntu-18.04"
+      os-fully-featured:
+        - "ubuntu-18.04"
       swift-version: "*"
       ssl-auth: "ssl-auth"
     then:
-      remove_tasks: ".3.6"
+      remove_tasks:
+      - ".3.6"
+
+- matrix_name: "tests-all"
+  matrix_spec:
+    os-fully-featured: "*"
+    swift-version:
+      - "5.2"
+      - "5.3"
+      - "5.4"
+      - "5.5-dev"
+    ssl-auth: "*"
+  display_name: "${swift-version} ${os-fully-featured} ${ssl-auth}"
+  tasks:
+     - ".latest"
+     - ".5.0"
+     - ".4.4"
+     - ".4.2"
+     - ".4.0"
+     - ".3.6"
+  rules:
+  # MongoDB 3.6 does not have Ubuntu 18.04-specific Linux releases, so we just use
+  # generic Linux there. This do not link to OpenSSL, so we have to skip SSL tests.
+  - if:
+      os-fully-featured:
+        - "ubuntu-18.04"
+      swift-version: "*"
+      ssl-auth: "ssl-auth"
+    then:
+      remove_tasks:
+        - ".3.6"
+  # There are no  Ubuntu 20.04-specific Linux releases until 4.4, and the last server
+  # version with generic Linux releases is 4.0, so we can't just use generic releases
+  # for earlier versions. For simplicity, and since we already have Ubuntu and < 4.4
+  # coverage on Ubuntu 18.04, we only test 4.4+ on Ubuntu 20.04.
+  - if:
+      os-fully-featured: "ubuntu-20.04"
+      swift-version: "*"
+      ssl-auth: "*"
+    then:
+      remove_tasks:
+        - ".3.6"
+        - ".4.0"
+        - ".4.2"
+
+# there are no 5.1 toolchains for Ubuntu 20.04. unfortunately as of now we cannot remove
+# entire buildvariants via rule from the main matrix so we need to split this up. see EVG-13092
+- matrix_name: "atlas-connect-5.1"
+  matrix_spec:
+    os-fully-featured:
+      - "macos-10.15"
+      - "ubuntu-18.04"
+    swift-version: "5.1"
+  display_name: "Atlas Connectivity ${swift-version} ${os-fully-featured}"
+  tasks:
+    - ".atlas-connect"
 
 - matrix_name: "atlas-connect"
   matrix_spec:
     os-fully-featured: "*"
     swift-version:
-      - "5.1"
       - "5.2"
+      - "5.3"
+      - "5.4"
+      - "5.5-dev"
   display_name: "Atlas Connectivity ${swift-version} ${os-fully-featured}"
   tasks:
     - ".atlas-connect"
@@ -1068,9 +1168,10 @@ buildvariants:
   matrix_spec:
     os-fully-featured:
       - "ubuntu-18.04"
-      - "ubuntu-16.04"
+      - "ubuntu-20.04"
     versions:
       - latest
+      - 5.0
       - 4.4
     swift-version:
       - 5.2
@@ -1078,15 +1179,25 @@ buildvariants:
   batchtime: 20160 # 14 days
   tasks:
     - ".ocsp"
+  rules:
+  - if:
+      os-fully-featured: "ubuntu-18.04"
+      versions: "*"
+      swift-version: "*"
+    then:
+      remove_tasks:
+        # OCSP stapling support was removed from Ubuntu 18.04, see SERVER-51364
+        - ".ocsp-staple"
 
 - matrix_name: "ocsp-macos"
   matrix_spec:
     os-fully-featured:
-      - macos-10.14
+      - macos-10.15
     swift-version:
       - 5.2
     versions:
       - latest
+      - 5.0
       - 4.4
   display_name: "OCSP ${swift-version} ${os-fully-featured} ${versions}"
   batchtime: 20160 # 14 days
@@ -1105,49 +1216,6 @@ buildvariants:
     # Versioned API was introduced in MongoDB 4.7
     - "test-latest-standalone"
 
-# define separate matrices for swift 5.3 that excludes macOS 10.14. unfortunately
-# as of now we cannot remove entire buildvariants via rule from the matrices above
-# so we need to split this up due to inability to test 5.3 on macOS 10.14.
-# see EVG-13092
-- matrix_name: "tests-all-5.3+"
-  matrix_spec:
-    os-fully-featured:
-      - "ubuntu-18.04"
-      - "ubuntu-16.04"
-    swift-version:
-      - "5.3"
-      - "5.4-dev"
-    ssl-auth: "*"
-  display_name: "${swift-version} ${os-fully-featured} ${ssl-auth}"
-  tasks:
-     - ".latest"
-     - ".4.4"
-     - ".4.2"
-     - ".4.0"
-     - ".3.6"
-  rules:
-  # pre 4.0 we are just using legacy linux mongoDB since ubuntu 18.04 didn't
-  # exist when 3.6 came out. legacy doesn't link to OpenSSL so we can't run
-  # SSL tests there.
-  - if:
-      os-fully-featured: "ubuntu-18.04"
-      swift-version: "*"
-      ssl-auth: "ssl-auth"
-    then:
-      remove_tasks: ".3.6"
-
-- matrix_name: "atlas-connect-5.3+"
-  matrix_spec:
-    os-fully-featured:
-      - "ubuntu-18.04"
-      - "ubuntu-16.04"
-    swift-version:
-      - "5.3"
-      - "5.4-dev"
-  display_name: "Atlas Connectivity ${swift-version} ${os-fully-featured}"
-  tasks:
-    - ".atlas-connect"
-
 - matrix_name: "format-lint"
   display_name: "Format and Lint"
   matrix_spec:
@@ -1160,7 +1228,7 @@ buildvariants:
 - matrix_name: "check-sourcery"
   display_name: "Check Sourcery"
   matrix_spec:
-    os-fully-featured: "macos-10.14"
+    os-fully-featured: "macos-10.15"
     swift-version: "5.2"
   tasks:
     - name: "check-sourcery"
