--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -356,6 +356,40 @@ functions:
           LINUX_SOURCEKIT_LIB_PATH=${PROJECT_DIRECTORY}/opt/swiftenv/versions/${SWIFT_VERSION}/usr/lib \
             ${PROJECT_DIRECTORY}/opt/swiftlint/.build/release/swiftlint --strict --quiet
   
+  start-load-balancer:
+    - command: shell.exec
+      params:
+        script: |
+          DRIVERS_TOOLS=${DRIVERS_TOOLS} MONGODB_URI=${MONGODB_URI} \
+            bash ${DRIVERS_TOOLS}/.evergreen/run-load-balancer.sh start
+    - command: expansions.update
+      params:
+        file: lb-expansion.yml
+  
+  stop-load-balancer:
+    - command: shell.exec
+      params:
+        script: |
+          DRIVERS_TOOLS=${DRIVERS_TOOLS} MONGODB_URI=${MONGODB_URI} \
+          bash ${DRIVERS_TOOLS}/.evergreen/run-load-balancer.sh stop
+
+  run-lb-tests:
+    - command: shell.exec
+      type: test
+      params:
+        working_dir: src
+        script: |
+          ${PREPARE_SHELL}
+          MONGODB_URI="${MONGODB_URI}" \
+          TOPOLOGY="${TOPOLOGY}" \
+          SSL=${SSL} \
+          AUTH=${AUTH} \
+          SWIFT_VERSION=${SWIFT_VERSION} \
+          MONGODB_API_VERSION="${MONGODB_API_VERSION}" \
+          SINGLE_MONGOS_LB_URI="${SINGLE_MONGOS_LB_URI}" \
+          MULTI_MONGOS_LB_URI="${MULTI_MONGOS_LB_URI}" \
+            ${PROJECT_DIRECTORY}/.evergreen/run-tests.sh
+
   "sourcery":
     - command: shell.exec
       type: test
@@ -579,6 +613,21 @@ tasks:
             MONGODB_VERSION: "latest"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
+  
+    - name: "test-latest-load_balancer"
+      tags: ["latest", "load-balancer"]
+      commands:
+        - func: "prepare resources"
+        - func: "fix absolute paths"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "latest"
+            TOPOLOGY: "sharded_cluster"
+        - func: start-load-balancer
+        - func: "run-lb-tests"
+          vars:
+            TOPOLOGY: "load_balanced"
+        - func: stop-load-balancer
 
     - name: "test-atlas-connectivity"
       tags: ["atlas-connect"]
@@ -1136,7 +1185,7 @@ buildvariants:
     ssl-auth: "*"
   display_name: "${swift-version} ${os-fully-featured} ${ssl-auth}"
   tasks:
-     - ".latest"
+     - ".latest !.load-balancer"
      - ".5.0"
      - ".4.4"
      - ".4.2"
@@ -1165,7 +1214,7 @@ buildvariants:
     ssl-auth: "*"
   display_name: "${swift-version} ${os-fully-featured} ${ssl-auth}"
   tasks:
-     - ".latest"
+     - ".latest !.load-balancer"
      - ".5.0"
      - ".4.4"
      - ".4.2"
@@ -1219,6 +1268,21 @@ buildvariants:
   display_name: "Atlas Connectivity ${swift-version} ${os-fully-featured}"
   tasks:
     - ".atlas-connect"
+
+- matrix_name: "load-balancer-all"
+  matrix_spec:
+    os-fully-featured:
+      - "ubuntu-18.04"
+      - "ubuntu-20.04"
+    ssl-auth: "*"
+    swift-version:
+      - "5.2"
+      - "5.3"
+      - "5.4"
+      - "5.5-dev"
+  display_name: "Load Balancer ${swift-version} ${os-fully-featured} ${ssl-auth}"
+  tasks:
+    - ".load-balancer"
 
 - matrix_name: "serverless"
   matrix_spec:
